no more redis!
Replace by an in-memory KV store instead that way we have an http
downstream service
